--- a/css/theme/black.css
+++ b/css/theme/black.css
@@ -11,22 +11,22 @@ section.has-light-background, section.has-light-background h1, section.has-light
  * GLOBAL STYLES
  *********************************************/
 body {
-  background: #191919;
-  background-color: #191919; }
+  background: #0e1329;
+  background-color: #0e1329; }
 
 .reveal {
   font-family: "Source Sans Pro", Helvetica, sans-serif;
   font-size: 42px;
   font-weight: normal;
-  color: #fff; }
+  color:  #cfa748; }
 
 ::selection {
-  color: #fff;
+  color:  #cfa748;
   background: #bee4fd;
   text-shadow: none; }
 
 ::-moz-selection {
-  color: #fff;
+  color: #cfa748;
   background: #bee4fd;
   text-shadow: none; }
 
@@ -45,7 +45,7 @@ body {
 .reveal h5,
 .reveal h6 {
   margin: 0 0 20px 0;
-  color: #fff;
+  color:  #cfa748;
   font-family: "Source Sans Pro", Helvetica, sans-serif;
   font-weight: 600;
   line-height: 1.2;
@@ -221,7 +221,7 @@ body {
   border: none; }
 
 .reveal .roll span:after {
-  color: #fff;
+  color: #cfa748;
   background: #068de9; }
 
 /*********************************************
